<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>gwt3</groupId>
    <artifactId>gwt3</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>war</packaging>
    <properties>

        <!--<modules>-->
            <!--<module>server</module>-->
            <!--<module>shared</module>-->
            <!--<module>web</module>-->
        <!--</modules>-->

        <!--<webappDirectory>${project.build.directory}/${project.build.finalName}</webappDirectory>-->
        <!-- Convenience property to set the GWT version -->
        <!--<gwt.version>2.6.0-rc3</gwt.version>-->
        <!--<tomcat.webport>8082</tomcat.webport>-->
        <!--<tomcat.ajpport>8182</tomcat.ajpport>-->
        <!--<tomcat.context>/parent</tomcat.context>-->


        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>1.8</java.version>
        <junit.version>4.12</junit.version>
        <hibernate.version>5.0.7.Final</hibernate.version>
        <hsqldb.version>2.3.4</hsqldb.version>
        <log4j.version>2.5</log4j.version>
        <codec.version>1.9</codec.version>
        <gwt.version>2.8.0</gwt.version>
        <validation.version>1.0.0.GA</validation.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>javax.servlet-api</artifactId>
            <version>3.1.0</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>jstl</groupId>
            <artifactId>jstl</artifactId>
            <version>1.2</version>
        </dependency>
        <dependency>
            <groupId>javax.validation</groupId>
            <artifactId>validation-api</artifactId>
            <version>${validation.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>javax.validation</groupId>
            <artifactId>validation-api</artifactId>
            <version>${validation.version}</version>
            <classifier>sources</classifier>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.google.gwt</groupId>
            <artifactId>gwt-servlet</artifactId>
            <version>${gwt.version}</version>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>com.google.gwt</groupId>
            <artifactId>gwt-user</artifactId>
            <version>${gwt.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>${log4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.hsqldb</groupId>
            <artifactId>hsqldb</artifactId>
            <version>${hsqldb.version}</version>
        </dependency>
        <dependency>
            <groupId>org.hibernate</groupId>
            <artifactId>hibernate-core</artifactId>
            <version>${hibernate.version}</version>
        </dependency>
        <dependency>
            <groupId>org.hibernate</groupId>
            <artifactId>hibernate-entitymanager</artifactId>
            <version>${hibernate.version}</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
        </dependency>
        <dependency>
            <groupId>commons-codec</groupId>
            <artifactId>commons-codec</artifactId>
            <version>${codec.version}</version>
        </dependency>
    </dependencies>

    <build>
        <!--<outputDirectory>${webappDirectory}/WEB-INF/classes</outputDirectory>-->

        <!--<plugins>-->
            <!--<plugin>-->
                <!--<groupId>org.codehaus.mojo</groupId>-->
                <!--<artifactId>gwt-maven-plugin</artifactId>-->
                <!--<version>${gwt.version}</version>-->
                <!--<executions>-->
                    <!--<execution>-->
                        <!--<goals>-->
                            <!--<goal>compile</goal>-->
                            <!--<goal>test</goal>-->
                            <!--<goal>i18n</goal>-->
                            <!--&lt;!&ndash;<goal>generateAsync</goal>&ndash;&gt;-->
                        <!--</goals>-->
                    <!--</execution>-->
                <!--</executions>-->
                <!--<configuration>-->
                    <!--<runTarget>MySampleApplication.html</runTarget>-->
                    <!--<hostedWebapp>${webappDirectory}</hostedWebapp>-->
                    <!--&lt;!&ndash;<i18nMessagesBundle></i18nMessagesBundle>&ndash;&gt;-->
                <!--</configuration>-->
            <!--</plugin>-->
            <!--<plugin>-->
                <!--<groupId>org.apache.maven.plugins</groupId>-->
                <!--<artifactId>maven-war-plugin</artifactId>-->
                <!--&lt;!&ndash;<executions>&ndash;&gt;-->
                <!--&lt;!&ndash;<execution>&ndash;&gt;-->
                <!--&lt;!&ndash;<phase>compile</phase>&ndash;&gt;-->
                <!--&lt;!&ndash;<goals>&ndash;&gt;-->
                <!--&lt;!&ndash;<goal>exploded</goal>&ndash;&gt;-->
                <!--&lt;!&ndash;</goals>&ndash;&gt;-->
                <!--&lt;!&ndash;</execution>&ndash;&gt;-->
                <!--&lt;!&ndash;</executions>&ndash;&gt;-->
                <!--<configuration>-->
                    <!--<webappDirectory>${webappDirectory}</webappDirectory>-->
                    <!--<webXml>web\WEB-INF\web.xml</webXml>-->
                <!--</configuration>-->
            <!--</plugin>-->
            <!--<plugin>-->
                <!--<groupId>org.apache.maven.plugins</groupId>-->
                <!--<artifactId>maven-compiler-plugin</artifactId>-->
                <!--<configuration>-->
                    <!--<source>${java.version}</source>-->
                    <!--<target>${java.version}</target>-->
                <!--</configuration>-->
            <!--</plugin>-->
        <!--</plugins>-->


        <!--<defaultGoal>clean install  tomcat7:run-war-only</defaultGoal>-->

        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>gwt-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <!--<configuration>-->
                            <!--<module>com.mySampleApplication</module>-->
                        <!--</configuration>-->
                        <goals>
                            <goal>compile</goal>
                        </goals>
                    </execution>
                </executions>
                <!--&lt;!&ndash;<version>${gwt.version}</version>&ndash;&gt;-->
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-war-plugin</artifactId>
                <configuration>
                    <webXml>web\WEB-INF\web.xml</webXml>
                    <webResources>
                        <resource>
                            <directory>web</directory>
                        </resource>

                    </webResources>
                </configuration>
                <!--<version>2.3</version>-->
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>

                <!--<version>2.5.1</version>-->
                <configuration>

                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <!--<plugin>-->
                <!--<groupId>org.apache.tomcat.maven</groupId>-->
                <!--<artifactId>tomcat7-maven-plugin</artifactId>-->
                <!--&lt;!&ndash;<version>2.0</version>&ndash;&gt;-->
                <!--<configuration>-->
                    <!--<path>${tomcat.context}</path>-->
                    <!--<port>${tomcat.webport}</port>-->
                    <!--<ajpPort>${tomcat.ajpport}</ajpPort>-->
                    <!--<systemProperties>-->
                        <!--<JAVA_OPTS>-XX:MaxPermSize=256m</JAVA_OPTS>-->
                    <!--</systemProperties>-->
                <!--</configuration>-->
            <!--</plugin>-->
        </plugins>
    </build>


</project>